objects/Workshop__c.object
<CustomObject>
    <fields>
        <fullName>Agenda__c</fullName>
        <description>Ordre du jour de la réunion</description>
        <label>Agenda</label>
        <length>1024</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Code__c</fullName>
        <displayFormat>W-{0000}</displayFormat>
        <externalId>true</externalId>
        <label>Code</label>
        <type>AutoNumber</type>
    </fields>
    <fields>
        <fullName>Date4Report__c</fullName>
        <formula>Date__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Date__c</fullName>
        <label>Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Duration__c</fullName>
        <label>Duration (H)</label>
        <precision>2</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>GoalAchievement__c</fullName>
        <description>NIveau d&apos;atteinte de l&apos;objectif de l&apos;atelier</description>
        <label>Goal Achievement</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Location__c</fullName>
        <label>Location</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Montparnasse - Paris</fullName>
                    <default>true</default>
                    <label>Montparnasse - Paris</label>
                </value>
                <value>
                    <fullName>Nantes</fullName>
                </value>
                <value>
                    <fullName>La Roche-sur-Yon</fullName>
                </value>
                <value>
                    <fullName>Lyon</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Nb_Attendees__c</fullName>
        <label>Nb Attendees</label>
        <summaryForeignKey>Attendee__c.Workshop__c</summaryForeignKey>
        <summaryOperation>count</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Nb_Participants__c</fullName>
        <description>Calcul du nombres de participants</description>
        <label>Nb participants</label>
        <summaryFilterItems>
            <field>Attendee__c.Status__c</field>
            <operation>equals</operation>
            <value>Présent</value>
        </summaryFilterItems>
        <summaryForeignKey>Attendee__c.Workshop__c</summaryForeignKey>
        <summaryOperation>count</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Objectives__c</fullName>
        <label>Objectives</label>
        <length>1024</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Phase__c</fullName>
        <label>Phase</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Cadrage</fullName>
                </value>
                <value>
                    <fullName>Design</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Release__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Release</label>
        <referenceTo>Release__c</referenceTo>
        <relationshipLabel>Workshop</relationshipLabel>
        <relationshipName>Workshop</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Scope__c</fullName>
        <label>Scope</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>Scope</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>StartTime__c</fullName>
        <label>Start Time</label>
        <length>5</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Status__c</fullName>
        <label>Status</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Planned</fullName>
                    <default>true</default>
                    <label>Planned</label>
                </value>
                <value>
                    <fullName>Done</fullName>
                </value>
                <value>
                    <fullName>Minutes sent</fullName>
                </value>
                <value>
                    <fullName>Minutes not required</fullName>
                </value>
                <value>
                    <fullName>Validated</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Type__c</fullName>
        <label>Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Business</fullName>
                </value>
                <value>
                    <fullName>Technical</fullName>
                </value>
                <value>
                    <fullName>Change</fullName>
                </value>
                <value>
                    <fullName>Project Management</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <label>Workshop</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>Date__c</columns>
        <columns>StartTime__c</columns>
        <columns>Duration__c</columns>
        <columns>Location__c</columns>
        <columns>Status__c</columns>
        <columns>Phase__c</columns>
        <columns>Type__c</columns>
        <columns>Scope__c</columns>
        <columns>GoalAchievement__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <listViews>
        <fullName>AllSales</fullName>
        <columns>NAME</columns>
        <columns>Date__c</columns>
        <columns>StartTime__c</columns>
        <columns>Duration__c</columns>
        <columns>Location__c</columns>
        <columns>Status__c</columns>
        <columns>Phase__c</columns>
        <columns>Type__c</columns>
        <columns>Scope__c</columns>
        <columns>GoalAchievement__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Scope__c</field>
            <operation>equals</operation>
            <value>Sales</value>
        </filters>
        <label>Tous les ateliers Sales</label>
    </listViews>
    <listViews>
        <fullName>AtelierDeLaSemaine</fullName>
        <columns>NAME</columns>
        <columns>Status__c</columns>
        <columns>Date__c</columns>
        <columns>StartTime__c</columns>
        <columns>Duration__c</columns>
        <columns>Location__c</columns>
        <columns>Phase__c</columns>
        <columns>Type__c</columns>
        <columns>Scope__c</columns>
        <columns>GoalAchievement__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Date__c</field>
            <operation>equals</operation>
            <value>THIS_WEEK</value>
        </filters>
        <label>Ateliers de la semaine</label>
    </listViews>
    <listViews>
        <fullName>Ateliers_de_Cadrage_Technique_MasterData</fullName>
        <booleanFilter>2 AND (1 OR ( 3 AND 4))</booleanFilter>
        <columns>NAME</columns>
        <columns>Date__c</columns>
        <columns>StartTime__c</columns>
        <columns>Location__c</columns>
        <columns>Nb_Attendees__c</columns>
        <columns>Objectives__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Type__c</field>
            <operation>equals</operation>
            <value>Technique</value>
        </filters>
        <filters>
            <field>Phase__c</field>
            <operation>equals</operation>
            <value>Cadrage</value>
        </filters>
        <filters>
            <field>Type__c</field>
            <operation>equals</operation>
            <value>Business</value>
        </filters>
        <filters>
            <field>Scope__c</field>
            <operation>equals</operation>
            <value>Master data</value>
        </filters>
        <label>Ateliers de Cadrage Technique/MasterData</label>
    </listViews>
    <listViews>
        <fullName>Ateliers_de_Design_MDM</fullName>
        <columns>NAME</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Phase__c</field>
            <operation>equals</operation>
            <value>Design</value>
        </filters>
        <filters>
            <field>Scope__c</field>
            <operation>equals</operation>
            <value>Master data</value>
        </filters>
        <label>Ateliers de Design - MDM</label>
    </listViews>
    <listViews>
        <fullName>Ateliers_de_Design_Sales</fullName>
        <columns>NAME</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Phase__c</field>
            <operation>equals</operation>
            <value>Design</value>
        </filters>
        <filters>
            <field>Scope__c</field>
            <operation>equals</operation>
            <value>Sales</value>
        </filters>
        <label>Ateliers de Design - Sales</label>
    </listViews>
    <listViews>
        <fullName>Ateliers_de_la_semaine_prochaine</fullName>
        <columns>NAME</columns>
        <columns>Date__c</columns>
        <columns>StartTime__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Date4Report__c</field>
            <operation>equals</operation>
            <value>NEXT_WEEK</value>
        </filters>
        <label>Ateliers de la semaine prochaine</label>
    </listViews>
    <listViews>
        <fullName>Ateliers_passes</fullName>
        <columns>NAME</columns>
        <columns>Date__c</columns>
        <columns>Duration__c</columns>
        <columns>Phase__c</columns>
        <columns>Scope__c</columns>
        <columns>Status__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Date__c</field>
            <operation>lessThan</operation>
            <value>TODAY</value>
        </filters>
        <filters>
            <field>Release__c</field>
            <operation>contains</operation>
            <value>One CRM</value>
        </filters>
        <filters>
            <field>Status__c</field>
            <operation>notEqual</operation>
            <value>Planifié</value>
        </filters>
        <label>Ateliers passés</label>
    </listViews>
    <listViews>
        <fullName>Ateliers_venir</fullName>
        <columns>NAME</columns>
        <columns>Date__c</columns>
        <columns>Duration__c</columns>
        <columns>Location__c</columns>
        <columns>Phase__c</columns>
        <columns>Scope__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Date__c</field>
            <operation>greaterOrEqual</operation>
            <value>TODAY</value>
        </filters>
        <filters>
            <field>Release__c</field>
            <operation>contains</operation>
            <value>One CRM</value>
        </filters>
        <label>Ateliers à venir</label>
    </listViews>
    <listViews>
        <fullName>Tous_les_ateliers_Change</fullName>
        <columns>NAME</columns>
        <columns>Nb_Attendees__c</columns>
        <columns>Status__c</columns>
        <columns>Scope__c</columns>
        <columns>Type__c</columns>
        <columns>Objectives__c</columns>
        <columns>Phase__c</columns>
        <columns>Date__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Scope__c</field>
            <operation>equals</operation>
            <value>Change</value>
        </filters>
        <label>Tous les ateliers Change</label>
    </listViews>
    <listViews>
        <fullName>Tous_les_ateliers_Marketing</fullName>
        <columns>NAME</columns>
        <columns>Date__c</columns>
        <columns>Nb_Participants__c</columns>
        <columns>Nb_Attendees__c</columns>
        <columns>Phase__c</columns>
        <columns>Release__c</columns>
        <columns>Scope__c</columns>
        <columns>Type__c</columns>
        <columns>Status__c</columns>
        <columns>Code__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Scope__c</field>
            <operation>equals</operation>
            <value>Marketing</value>
        </filters>
        <label>Tous les ateliers Marketing</label>
    </listViews>
    <listViews>
        <fullName>Tous_les_ateliers_Service</fullName>
        <columns>NAME</columns>
        <columns>StartTime__c</columns>
        <columns>Date__c</columns>
        <columns>Duration__c</columns>
        <columns>Location__c</columns>
        <columns>Status__c</columns>
        <columns>Phase__c</columns>
        <columns>Type__c</columns>
        <columns>Scope__c</columns>
        <columns>GoalAchievement__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Scope__c</field>
            <operation>equals</operation>
            <value>Services,Field Services</value>
        </filters>
        <label>Tous les ateliers Service</label>
    </listViews>
    <listViews>
        <fullName>Tous_les_ateliers_de_Design</fullName>
        <columns>NAME</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Phase__c</field>
            <operation>equals</operation>
            <value>Design</value>
        </filters>
        <label>Tous les ateliers de Design</label>
    </listViews>
    <nameField>
        <label>Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Workshops</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>